--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ mkdocs>=1.5.0
 mkdocs-material>=9.4.0
 pymdown-extensions>=10.3
 mkdocs-git-revision-date-localized-plugin>=1.2.0
-mkdocs-git-changelog-plugin>=0.2.0
+mkdocs-changelog-plugin>=0.2.0
+mkdocs-macros-plugin>=1.0.4
