--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,16 +26,15 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           
-      - name: Generate fallback changelog if needed
+      - name: Generate changelog (from git commits)
         run: |
-          # Fallback für das Changelog, falls das Plugin nicht funktioniert
-          if ! pip list | grep -q "mkdocs-changelog-plugin"; then
-            echo "# Changelog" > docs/changelog.md
-            echo "" >> docs/changelog.md
-            echo "## Änderungshistorie" >> docs/changelog.md
-            echo "" >> docs/changelog.md
-            git log --pretty=format:"### %ad - %an%n%s%n%n" --date=short >> docs/changelog.md
-          fi
+          echo "# Changelog" > docs/changelog.md
+          echo "" >> docs/changelog.md
+          echo "Hinweis: Diese Seite wird bei jedem Build automatisch aus den Git-Commits generiert." >> docs/changelog.md
+          echo "" >> docs/changelog.md
+          echo "## Änderungshistorie" >> docs/changelog.md
+          echo "" >> docs/changelog.md
+          git log --date=short --pretty=format:"### %ad - %an%n%s%n" --no-merges >> docs/changelog.md
           
       - name: Build and deploy
         run: |
