--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -25,6 +28,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Configure Git user
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           
       - name: Generate changelog (from git commits)
         run: |
@@ -38,6 +46,6 @@ jobs:
           
       - name: Build and deploy
         run: |
-          mkdocs gh-deploy --force
+          mkdocs gh-deploy --force --no-history
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
