--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,33 +7,38 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:
 
 permissions:
-  contents: write
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-          
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Configure Git user
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          
       - name: Generate changelog (from git commits)
         run: |
           echo "# Changelog" > docs/changelog.md
@@ -43,9 +48,20 @@ jobs:
           echo "## Änderungshistorie" >> docs/changelog.md
           echo "" >> docs/changelog.md
           git log --date=short --pretty=format:"### %ad - %an%n%s%n" --no-merges >> docs/changelog.md
-          
-      - name: Build and deploy
+
+      - name: Build site
         run: |
-          mkdocs gh-deploy --force --no-history
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          mkdocs build --strict
+          echo > site/.nojekyll
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: site
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - id: deployment
+        uses: actions/deploy-pages@v4
